--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
 /* Your CSS Code here. */
+.holder{
+	justify-content:center;
+	width:100vw;
+	height:100vh;
+	
+}
+
+.item{
+	width:100px;
+	height:100px;
+	background-color:red;
+}
